--- a/fx-jai/fx-web/war/WEB-INF/web.xml
+++ b/fx-jai/fx-web/war/WEB-INF/web.xml
@@ -10,6 +10,17 @@
 		<welcome-file>Poc.html</welcome-file>
 	</welcome-file-list>
 	
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:applicationContext.xml</param-value>
+	</context-param>
+	
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	
+	
 	<!-- Base Servlets -->
 	<servlet>
 		<servlet-name>pocGWTServlet</servlet-name>
