--- a/fx-jai/fx-core/pom.xml
+++ b/fx-jai/fx-core/pom.xml
@@ -17,6 +17,16 @@
 		
 	<dependencies>
 		<!-- ***************************** PARRENT MODULES ***************************** -->
+		<dependency>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>fx-shared</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.parent.groupId}</groupId>
+			<artifactId>fx-db</artifactId>
+			<version>${project.parent.version}</version>
+		</dependency>
 	</dependencies>	
 	
 	<build>
