--- a/fx-jai/fx-db/pom.xml
+++ b/fx-jai/fx-db/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project 
-	xmlns="http://maven.apache.org/POM/4.0.0" 
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	
@@ -11,10 +10,11 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-	<artifactId>fx-connector</artifactId>
+	<artifactId>fx-db</artifactId>
 	<packaging>jar</packaging>
-	<name>FX CONNECTOR - MQL to Java connection module</name>
+	<name>FX-jAI db services</name>
 
+		
 	<dependencies>
 		<!-- ***************************** PARRENT MODULES ***************************** -->
 		<dependency>
@@ -22,15 +22,9 @@
 			<artifactId>fx-shared</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>${project.parent.groupId}</groupId>
-			<artifactId>fx-core</artifactId>
-			<version>${project.parent.version}</version>
-		</dependency>
-	</dependencies>
+	</dependencies>	
 	
 	<build>
-		
 	</build>
 
 </project>
